Fixed the JVM options