@@ -1,5 +1,6 @@
 #!/bin/sh
 
-VMOPTS="-Xmx4g -da -server $VMOPTS"
+VMOPTS="-Xmx4g -da -server -XX:+PrintGCDetails -XX:+UseNUMA -XX:+UseParallelGC $VMOPTS"
 
 java ${VMOPTS} -jar hivemall-all.jar $@
+
